--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,20 +3,23 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- main
+  paths:
+    include:
+      - aspnetapp/*
 
 resources:
 - repo: self
 
 variables:
   # Container registry service connection established during pipeline creation
+  dockerRegistryServiceConnection: '726cd04e-5322-44e8-b964-b0b82e9ea5ac'
   imageRepository: 'cicddemo'
   containerRegistry: 'inlogikacr.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   tag: '$(Build.BuildId)'
 
 pool:
- name: 'demoagent'
+ name: 'demoagent1'
 
 stages:
 - stage: Build
@@ -33,10 +36,12 @@ stages:
         command: 'build'
         Dockerfile: '**/Dockerfile'
         tags: '$(tag)'
+        arguments: '--platform linux/amd64'
+        
 - stage: Push
   displayName: Push
   jobs:
-  - job: Build
+  - job: Push
     displayName: Push
     steps:
     - task: Docker@2
@@ -46,3 +51,16 @@ stages:
         repository: '$(imageRepository)'
         command: 'push'
         tags: '$(tag)'
+        
+- stage: updatemanifest
+  displayName: updatemanifest
+  jobs:
+  - job: update
+    displayName: update
+    steps:
+
+    - task: ShellScript@2
+      inputs:
+          scriptPath: 'scripts/updatek8manifest.sh'
+          args: '$(pat) $(imageRepository) $(tag)'
+      
